Fixed tooltips behaviour and navbar appear and collapse animation

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,10 @@
   }
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
